更换子模块存放位置

--- a/docs/01.前端/04.Webpack/01.起步.md
+++ b/docs/01.前端/04.Webpack/01.起步.md
@@ -8,7 +8,18 @@ categories:
 tags:
   - 
 ---
-部分源代码来自于
-[阮一峰的webpack-demo](https://github.com/ruanyf/webpack-demos)
-[姜瑞涛的webpack教程](https://www.jiangruitao.com/webpack/)
 
+1. 初始化package.json并引入依赖包，使用npm/yarn/pnpm均可
+```
+pnpm init -y
+pnpm i -D webpack webpack-cli webpack-dev-server html-webpack-plugin
+```
+
+package.json
+<<< @/codes/webpack-demos-pro/basic/package.json
+::: tip 注：
+webpack : 使项目可以执行webpack命令
+webpack-cli: webpack命令依赖的核心代码，在执行webpack xxx 后会自动到Webpack-cli中查找相应代码并执行
+webpack-dev-server : 运行时依赖，创建一个带热更新的express服务器，使更改webpack代码后可以实时观测效果
+html-webpack-plugin : 根据代码自动创建html文件并注入js、css等标签
+:::
