编写第一篇webpack内容

--- a/docs/01.前端/04.Webpack/01.起步.md
+++ b/docs/01.前端/04.Webpack/01.起步.md
@@ -9,17 +9,48 @@ tags:
   - 
 ---
 
-1. 初始化package.json并引入依赖包，使用npm/yarn/pnpm均可
+### 1. 初始化package.json并引入依赖包，使用npm/yarn/pnpm均可
 ```
 pnpm init -y
 pnpm i -D webpack webpack-cli webpack-dev-server html-webpack-plugin
 ```
 
 package.json
+
 <<< @/codes/webpack-demos-pro/basic/package.json
-::: tip 注：
-webpack : 使项目可以执行webpack命令
-webpack-cli: webpack命令依赖的核心代码，在执行webpack xxx 后会自动到Webpack-cli中查找相应代码并执行
-webpack-dev-server : 运行时依赖，创建一个带热更新的express服务器，使更改webpack代码后可以实时观测效果
-html-webpack-plugin : 根据代码自动创建html文件并注入js、css等标签
+::: tip 依赖：
+`webpack` : 使项目可以执行webpack命令
+
+`webpack-cli` : webpack命令依赖的核心代码，在执行webpack xxx 后会自动到Webpack-cli中查找相应代码并执行
+
+`webpack-dev-server` : 运行时依赖，创建一个带热更新的express服务器，使更改webpack代码后可以实时观测效果
+
+`html-webpack-plugin` : 根据代码自动创建html文件并注入js、css等标签，可以通过`template`选项自定义html模板，插件只做注入标签的功能。
 :::
+
+::: tip 命令：
+`webpack` :  调用`webpack.config.js`配置文件并执行，生成编译后的代码
+
+`webpack serve` :  调用`webpack-dev-server` 插件，编译后的代码存放在内存中，动态更新时只需要更改内存中的数据，因为不用更新写入文件，性能可以获得一定提升。
+:::
+
+### 2. 编写待编译的js文件
+
+main.js
+
+<<< @/codes/webpack-demos-pro/basic/main.js
+
+### 3. 编写配置文件
+
+webpack.config.js
+
+<<< @/codes/webpack-demos-pro/basic/webpack.config.js
+
+### 4. 启动项目查看效果
+```
+pnpm dev 
+```
+或
+```
+pnpm build
+```
