--- a/docs/01.前端/02.Vue3/01.创建项目.md
+++ b/docs/01.前端/02.Vue3/01.创建项目.md
@@ -23,3 +23,29 @@ yarn global add @vue/cli
 vue create vue-study
 ```
 
+![版本选择](https://gitee.com/lemonnnnnnnnnnn/picture/raw/master/image/版本选择.png)
+
+3. 添加路由`npm i vue-router`
+
+在`src`目录下新建一个`router.js`文件，并编写路由信息
+```
+import { createRouter, createWebHashHistory } from 'vue-router'
+
+export const routes = [
+    {
+        path: '/',
+        name: '首页',
+        component: () => import('./App.vue'),
+    },
+]
+
+const router = createRouter({
+    history: createWebHashHistory(),
+    routes
+})
+
+export default router
+```
+
+找到`main.js`文件并修改
+![](https://gitee.com/lemonnnnnnnnnnn/picture/raw/master/image/20220418171328.png)
