--- a/docs/01.前端/04.Webpack/01.起步.md
+++ b/docs/01.前端/04.Webpack/01.起步.md
@@ -8,7 +8,14 @@ categories:
 tags:
   - 
 ---
-部分源代码来自于
-[阮一峰的webpack-demo](https://github.com/ruanyf/webpack-demos)
-[姜瑞涛的webpack教程](https://www.jiangruitao.com/webpack/)
 
+首先，我们生成package.json并安装好依赖包，工具使用npm/yarn/pnpm均可
+```
+pnpm init -y
+pnpm i webpack 
+```
+
+
+本节我们主要需要编写两个文件，`main.js`与`webpack.config.js`。
+
+`webpack.config.js`是Webpack的核心配置文件，
