server push - underway nodejs- child_process - underway vue-study - underway

--- a/docs/02.后端/01.服务器/01.linux/01.常用命令.md
+++ b/docs/02.后端/01.服务器/01.linux/01.常用命令.md
@@ -47,3 +47,6 @@ rm -rf 目录名字
 6. 设置文件夹读写权限 chmod [rwx] [路径]
 chmod a+rw file ： a : 所有用户 , + ：增加权限 , rw : 读写
 [详细配置](https://www.runoob.com/linux/linux-comm-chmod.html)
+
+7. 上传文件到服务器上
+scp [本地路径] [服务器username]@[服务器IP地址]:[服务器路径]
