--- a/docs/04.开发工具/01.git/01.常用指令.md
+++ b/docs/04.开发工具/01.git/01.常用指令.md
@@ -11,5 +11,9 @@ submodule sync
 git submodule update --init --recursive
 ```
 
+::: danger 
+2022-4-19 : 出现了子模块版本号丢失的情况，需要系统学习子模块知识才能找到原因。
+:::
+
 ### 清除缓存 
 git rm -r --cached .
