--- a/docs/04.开发工具/01.git/01.常用指令.md
+++ b/docs/04.开发工具/01.git/01.常用指令.md
@@ -1,19 +1,3 @@
-### 子模块
-添加一个子模块
-```
-// git submodule add [git地址] [目录位置]
-$ git submodule add https://xxx/gittest.git src/gittest
-```
 
-更新所有子模块
-```
-submodule sync
-git submodule update --init --recursive
-```
-
-::: danger 
-2022-4-19 : 出现了子模块版本号丢失的情况，需要系统学习子模块知识才能找到原因。
-:::
-
-### 清除缓存 
-git rm -r --cached .
+清除缓存  `git rm -r --cached` .
+查看所有分支： `git branch -a`
