--- a/docs/04.开发工具/01.git/02.submodule.md
+++ b/docs/04.开发工具/01.git/02.submodule.md
@@ -92,3 +92,5 @@ git rm [子项目名]   // 移除子项目文件夹，并在.gitmodules中删除
 检查下`git rm --cached [子模块名称]`是否有效 
 :::
 
+
+更详细的子模块解释，请参考[文档](https://git-scm.com/book/zh/v2/Git-%E5%B7%A5%E5%85%B7-%E5%AD%90%E6%A8%A1%E5%9D%97)
