--- a/docs/02.后端/01.服务器/01.linux/01.常用命令.md
+++ b/docs/02.后端/01.服务器/01.linux/01.常用命令.md
@@ -50,3 +50,61 @@ chmod a+rw file ： a : 所有用户 , + ：增加权限 , rw : 读写
 
 7. 上传文件到服务器上
 scp [本地路径] [服务器username]@[服务器IP地址]:[服务器路径]
+
+8. 解压命令
+
+##### 解压.tar文件
+`tar -xvf 文件名`
+- x 解压 c压缩
+- v 显示执行过程
+- f 指定备份文件
+
+##### 解压 .gz 文件
+`gzip -d FileName.gz`
+- d 意思为`decompress` 
+
+##### 解压 .xz 文件
+  1. `xz -d xxx.xz` 解压成.tar
+  2. `tar -xvf xxx.tar` 解压成普通文件
+
+9. 安装命令
+  1. ./configure : 为编译做好准备；
+  2. make 进行软件编译；
+  3. make install 完成安装；
+
+10. 后台运行`nohup [命令] &`
+nohup只有在使用exit命令正常退出终端，才能保证命令一直在后台运行。终端异常退出后台命令也会停止运行。
+
+11. 运行的所有进程 ： `ps -aux`
+
+12. 终止进程 `kill [pid]`
+
+13. 
+pwd: 当前路径  
+`~` : 表示代码主目录，也就是当前登录用户的用户目录。
+例如：
+```
+cd ~  # root@VM-12-7-ubuntu:~#
+pwd    # /root
+```
+
+14. wget代理配置
+在主文件夹下新建.wgetrc
+```
+#You can set the default proxies for Wget to use for http, https, and ftp.
+# They will override the value in the environment.
+https_proxy = http://127.0.0.1:7890/
+http_proxy = http://127.0.0.1:7890/
+ftp_proxy = http://127.0.0.1:7890/
+
+# If you do not want to use proxy at all, set this to off.
+use_proxy = on
+```
+
+15. 所有终端走代理
+编辑~/.bashrc
+```
+export http_proxy="http://127.0.0.1:7890"
+export https_proxy="http://127.0.0.1:7890"
+
+```
