--- a/docs/02.后端/01.服务器/01.linux/01.常用命令.md
+++ b/docs/02.后端/01.服务器/01.linux/01.常用命令.md
@@ -101,10 +101,4 @@ ftp_proxy = http://127.0.0.1:7890/
 use_proxy = on
 ```
 
-15. 所有终端走代理
-编辑~/.bashrc
-```
-export http_proxy="http://127.0.0.1:7890"
-export https_proxy="http://127.0.0.1:7890"
-
-```
+15. cat [文件路径]（英文全拼：concatenate）命令用于连接文件并打印到标准输出设备上。
