--- a/docs/02.后端/01.服务器/01.linux/01.常用命令.md
+++ b/docs/02.后端/01.服务器/01.linux/01.常用命令.md
@@ -34,6 +34,9 @@ tags:
 **恢复上一次操作**
 「u」：如果您误执行一个命令，可以马上按下「u」，回到上一个操作。按多次"u"可以执行多次回复。
 
+**查找**
+[/字符串]
+
 **退出：**
 esc: 退出当前模式
 : q! (输入q!， 不存盘强制退出vi)
@@ -102,3 +105,13 @@ use_proxy = on
 ```
 
 15. cat [文件路径]（英文全拼：concatenate）命令用于连接文件并打印到标准输出设备上。
+
+16. 复制  ： `cp 源文件 目标文件(夹)`
+
+17. 重启ssh  `/etc/init.d/ssh restart`
+
+18. 查看权限 `ls -l 文件（夹）`
+
+19. 系统安全文件 `vim /var/log/auth.log`
+
+20. `G` 文件底部
