--- a/docs/02.后端/01.服务器/01.linux/01.常用命令.md
+++ b/docs/02.后端/01.服务器/01.linux/01.常用命令.md
@@ -115,3 +115,8 @@ use_proxy = on
 19. 系统安全文件 `vim /var/log/auth.log`
 
 20. `G` 文件底部
+
+21. `cat`
+`cat [文件名]` 打印文件
+`cat > [文件名]` 覆写文件
+`cat >> [文件名]` 追加内容
