--- a/docs/02.后端/01.服务器/01.linux/03.ssh.md
+++ b/docs/02.后端/01.服务器/01.linux/03.ssh.md
@@ -33,17 +33,9 @@
 如果是windows系统，用`git bash`来运行指令，`cmd和powerShell`不识别`ssh-copy-id`命令
 :::
 
-### 接收方会到哪里查找自己的公钥？能不能自定义多个密钥对？
+### 接收方会到哪里查找自己的公钥？
 
 默认查找`~/.ssh/authorized_keys`文件。 
-
-如果要自定义密钥对可以在配置文件`~/.ssh/config`中进行定义
-
-```
-Host xxx.xxxx.xxx.xxx.          # 客户端IP，如 11.111.11.11
-User  username                  # username 是要使用的登录名，如root
-IdentityFile ~/.ssh/密钥名       # 密钥名
-```
 
 ::: tip 
 `~/.ssh/config`中的配置如果和默认ssh配置(`/etc/ssh/sshd_config`)冲突
