feat: vue-router

--- a/docs/01.前端/02.Vue3/01.基础使用/01.创建项目.md
+++ b/docs/01.前端/02.Vue3/01.基础使用/01.创建项目.md
@@ -47,6 +47,11 @@ const router = createRouter({
 export default router
 ```
 
+::: tip 
+关于`createWebHashHistory和createWebHistory`请参考[Vue-Router](/pages/f16403/)
+
+:::
+
 找到`main.js`文件并修改
 
 ![](https://s2.loli.net/2022/04/18/ByU9vmWNQIZLEFC.png)
