--- a/docs/01.前端/01.React/02.SWR/01.入门.md
+++ b/docs/01.前端/01.React/02.SWR/01.入门.md
@@ -9,3 +9,44 @@ categories:
 tags:
   - 
 ---
+
+# 安装
+```
+yarn add swr
+```
+
+#  基本使用
+
+### 首先，我们来看一个传统的请求写法，渲染的组件结构如下
+
+![](https://s2.loli.net/2022/04/23/3SZnw1kzGKIjU9o.png)
+
+<<< @/codes/swr/src/pages/compare/tranditional.jsx  
+
+显然，根据React单向数据流的原则，我们通常会将公用数据存放在顶层组件中，然后向下传递数据。
+
+当然，我们可以用[Context](https://reactjs.org/docs/context.html)来避免多层的Props传递，来使代码更优美一些。
+
+
+### 那么用Swr有什么不同呢？代码如下
+
+<<< @/codes/swr/src/pages/compare/swr-demo.jsx
+
+最明显的不同是，我们的父组件不再管理数据，每个组件可以自行拿到自己需要的数据,如
+
+<<< @/codes/swr/src/pages/compare/swr-demo.jsx#snippet{1}
+
+你可能会有所疑问，`fetchData`函数看起来有点像`await`方法，进行了一次异步请求，并返回了`data`数据用于渲染。但是，我们一共写了三个`fetchData`，这是否意味着请求会发送三次呢？
+
+![](https://s2.loli.net/2022/04/23/VnFB8WT9skYdxp2.png)
+
+事实上是并没有。原因是因为我们三次请求的地址都是`https://animechan.vercel.app/api/random`，`Swr`会对这三次请求进行`去重、缓存、共享`处理。
+
+**此外，自动重新请求也是swr的一大特色**
+
+![](https://s2.loli.net/2022/04/23/P8ksOa9wXJ2Mrtq.gif)
+
+这种行为默认会发生在
+- 聚焦时重新请求
+- 重新连接时重新请求
+
