--- a/docs/04.开发工具/02.可视化工具/01.杂项.md
+++ b/docs/04.开发工具/02.可视化工具/01.杂项.md
@@ -15,3 +15,5 @@ tags:
 [ndm](https://www.neatdownloadmanager.com/index.php/en/) : 下载器
 [broot](https://dystroy.org/broot/) ： ls工具，树形结构展示文件夹
 [haroopad](http://pad.haroopress.com/) : markdown工具
+[drawio](https://github.com/jgraph/drawio-desktop) : 画图工具
+[screenToGif](https://www.screentogif.com/) : GIF录制工具
