--- a/docs/04.开发工具/01.git/02.submodule.md
+++ b/docs/04.开发工具/01.git/02.submodule.md
@@ -9,67 +9,8 @@ tags:
   - 
 ---
 
-### 使用例子
 
-##### 初始化
-新建两个仓库`inner-repo 和 nested-repo`
-![](https://s2.loli.net/2022/04/19/fwtou8gBkGr7sLZ.png)
-
-给主仓库`nested-repo`添加`submodule`并推送
-![](https://s2.loli.net/2022/04/19/1W6Bjvos8UHJqtr.png)
-![](https://s2.loli.net/2022/04/19/cQ7l5DUnmGzeMgd.png)
-
-##### 1. 修改子仓库，并在主项目更新子模块
-
-到子仓库`inner-repo`修改`README`文件，并推送
-![](https://s2.loli.net/2022/04/19/4xaR6LscWUmGfCb.png)
-![](https://s2.loli.net/2022/04/19/jsAxdeuwRF1nXCc.png)
-
-可以看到主仓库中的子模块记录了一个版本号，点击跳转来到子仓库后可以看到出现了一个`游离分支`,其中的README文件为旧文件
-![](https://s2.loli.net/2022/04/19/4D5agbMFXC1GHvE.png)
-![](https://s2.loli.net/2022/04/19/eWCTvNy1MiZFKUh.png)
-分支值实际上是`最后一次commit的 hash值`
-
-> 游离分支：不存在于源仓库中的临时分支。
-
-我们通过`git submodule foreach git pull`命令更新主仓库的子模块内容
-![](https://s2.loli.net/2022/04/19/wjcVmynTGlKozWL.png)
-
-
-##### 2. clone带子模块的仓库，并进行修改提交
-![](https://s2.loli.net/2022/04/19/Zt5w2cVFUY8bHjO.png)
-clone下来后发现子模块的文件夹为空，通过`git submodule update --init --recursive`命令拉取子模块代码
-![](https://s2.loli.net/2022/04/19/6mWhMouvqdBJkcn.png)
-![](https://s2.loli.net/2022/04/19/W8Oc7KvLHrCyXMI.png)
-
-修改子模块文件并推送，发现推送失败
-![](https://s2.loli.net/2022/04/19/cwXVd9AxE57l1rW.png)
-![](https://s2.loli.net/2022/04/19/p8iAOZ73KzJdw9k.png)
-这是因为我们clone下来的项目子模块处于`游离分支`上，源仓库是没有这个分支的，我们需要指定推送分支：
-![](https://s2.loli.net/2022/04/19/p73dZzNWUKV4mHq.png)
-
-
-### submodule原理
-1. 给主仓库添加子模块实际上是添加了一个子模块的**指针**，即子模块`最后一次commit的的hash值`。
-
-::: tip 
-事实上，`commit的hash值`在并不是在执行`git commit`命令时生成的，而是第一次修改文件时生成的。
-
-因此在可视化工具中可以看到，只要一修改子模块，主仓库的子模块指针立刻就改变了。
-:::
-
-::: tip 
-子模块修改一定有两次commit
-
-子模块正常commit
-
-主仓库指针commit
-:::
-
-
-
-
-### 常用命令
+# 常用命令
 
 1.  添加一个子模块
 ```
@@ -99,8 +40,65 @@ git rm [子项目名]   // 移除子项目文件夹，并在.gitmodules中删除
 ```
 ::: tip
 需要手动删除`.git/modules` 目录下的子模块，否则拉取远程子模块代码会先读这里的本地缓存
-检查下`git rm --cached [子模块名称]`是否有效 
 :::
+
+# 使用例子
+
+### 初始化
+新建两个仓库`inner-repo 和 nested-repo`
+![](https://s2.loli.net/2022/04/19/fwtou8gBkGr7sLZ.png)
+
+给主仓库`nested-repo`添加`submodule`并推送
+![](https://s2.loli.net/2022/04/19/1W6Bjvos8UHJqtr.png)
+![](https://s2.loli.net/2022/04/19/cQ7l5DUnmGzeMgd.png)
+
+### 1. 修改子仓库，并在主项目更新子模块
+
+到子仓库`inner-repo`修改`README`文件，并推送
+![](https://s2.loli.net/2022/04/19/4xaR6LscWUmGfCb.png)
+![](https://s2.loli.net/2022/04/19/jsAxdeuwRF1nXCc.png)
+
+可以看到主仓库中的子模块记录了一个版本号，点击跳转来到子仓库后可以看到出现了一个`游离分支`,其中的README文件为旧文件
+![](https://s2.loli.net/2022/04/19/4D5agbMFXC1GHvE.png)
+![](https://s2.loli.net/2022/04/19/eWCTvNy1MiZFKUh.png)
+分支值实际上是`最后一次commit的 hash值`
+
+> 游离分支：不存在于源仓库中的临时分支。
+
+我们通过`git submodule foreach git pull`命令更新主仓库的子模块内容
+![](https://s2.loli.net/2022/04/19/wjcVmynTGlKozWL.png)
+
+
+### 2. clone带子模块的仓库，并进行修改提交
+![](https://s2.loli.net/2022/04/19/Zt5w2cVFUY8bHjO.png)
+clone下来后发现子模块的文件夹为空，通过`git submodule update --init --recursive`命令拉取子模块代码
+![](https://s2.loli.net/2022/04/19/6mWhMouvqdBJkcn.png)
+![](https://s2.loli.net/2022/04/19/W8Oc7KvLHrCyXMI.png)
+
+修改子模块文件并推送，发现推送失败
+![](https://s2.loli.net/2022/04/19/cwXVd9AxE57l1rW.png)
+![](https://s2.loli.net/2022/04/19/p8iAOZ73KzJdw9k.png)
+这是因为我们clone下来的项目子模块处于`游离分支`上，源仓库是没有这个分支的，我们需要指定推送分支：
+![](https://s2.loli.net/2022/04/19/p73dZzNWUKV4mHq.png)
+
+
+# submodule原理
+1. 给主仓库添加子模块实际上是添加了一个子模块的**指针**，即子模块`最后一次commit的的hash值`。
+
+::: tip 
+事实上，`commit的hash值`在并不是在执行`git commit`命令时生成的，而是第一次修改文件时生成的。
+
+因此在可视化工具中可以看到，只要一修改子模块，主仓库的子模块指针立刻就改变了。
+:::
+
+::: tip 
+子模块修改一定有两次commit
+
+子模块正常commit
+
+主仓库指针commit
+:::
+
 
 
 更详细的子模块解释，请参考[文档](https://git-scm.com/book/zh/v2/Git-%E5%B7%A5%E5%85%B7-%E5%AD%90%E6%A8%A1%E5%9D%97)
