--- a/docs/01.前端/02.Vue3/01.基础使用/01.创建项目.md
+++ b/docs/01.前端/02.Vue3/01.基础使用/01.创建项目.md
@@ -28,14 +28,14 @@ vue create vue-study
 3. 添加路由`npm i vue-router`
 
 在`src`目录下新建一个`router.js`文件，并编写路由信息
-```
+```js
 import { createRouter, createWebHashHistory } from 'vue-router'
 
 export const routes = [
     {
         path: '/',
         name: '首页',
-        component: () => import('./App.vue'),
+        component: () => import('./App.vue'), // 使用函数来import组件能够让webpack单独将其打成一个js包，实现懒加载的功能
     },
 ]
 
@@ -54,4 +54,14 @@ export default router
 
 找到`main.js`文件并修改
 
-![](https://s2.loli.net/2022/04/18/ByU9vmWNQIZLEFC.png)
+```js
+import { createApp } from 'vue'
+import Router from './router'
+import App from './App.vue'
+
+createApp(App).use(Router).mount('#app')
+
+```
+
+后续路由的更新只需修改`router.js`文件即可，通过`域名/path`即可访问对应的vue组件
+
