--- a/docs/01.前端/02.Vue/02.Vue3/02.组合式API/01.setup语法糖.md
+++ b/docs/01.前端/02.Vue/02.Vue3/02.组合式API/01.setup语法糖.md
@@ -11,10 +11,6 @@ tags:
   - 
 ---
 
-# 什么是语法糖？
+# 首先，让我们来介绍一下setup
 
-简单来说：就是抽象复杂的模板化代码成**标识符、字符串或者配置信息**
-
-# setup？
-
-这是vue3中新增的
+如果你已经对js中的Class(类)有了解的话，你很容易就能明白setup函数
