--- a/docs/04.开发工具/01.git/02.submodule.md
+++ b/docs/04.开发工具/01.git/02.submodule.md
@@ -81,6 +81,8 @@ clone下来后发现子模块的文件夹为空，通过`git submodule update --
 这是因为我们clone下来的项目子模块处于`游离分支`上，源仓库是没有这个分支的，我们需要指定推送分支：
 ![](https://s2.loli.net/2022/04/19/p73dZzNWUKV4mHq.png)
 
+当然，更好的办法是在**clone下仓库后，将子模块的分支从游离分支切换到工作分支上**。这样我们就可以直接在该分支上进行正常开发推送了。
+
 
 # submodule原理
 1. 给主仓库添加子模块实际上是添加了一个子模块的**指针**，即子模块`最后一次commit的的hash值`。
