更换子仓库

--- a/docs/01.前端/02.Vue/01.Vue2/03.data.md
+++ b/docs/01.前端/02.Vue/01.Vue2/03.data.md
@@ -33,4 +33,5 @@ var Component = Vue.extend({
 - 类生成的实例对象，他们的数据相互隔离
 - 而Vue组件，却会引用**同一份data数据**
 
-这是因为vue的数据流是基于**双向绑定**实现的，具体实现方法是使用[Proxy](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Proxy)递归的将data的属性定义好`getter和setter`，从而使`data`可以响应数据的变化来渲染页面
+
+<!-- 这是因为vue的数据流是基于**双向绑定**实现的，具体实现方法是使用[Proxy](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Proxy)递归的将data的属性定义好`getter和setter`，从而使`data`可以响应数据的变化来渲染页面 -->
