--- a/docs/01.前端/02.Vue/01.Vue2/04.响应式对象.md
+++ b/docs/01.前端/02.Vue/01.Vue2/04.响应式对象.md
@@ -1,1 +1,17 @@
-https://juejin.cn/post/7049359043936288805#heading-5
+<!-- # 前言
+
+Vue实现的两大核心是`数据驱动和组件系统`，其中数据驱动是靠`响应式对象`来实现的，即：
+-   检测数据的变化
+-   局部更新DOM树
+
+我们这节只来讨论第一点`如何检测数据的变化`，即`如何实现观察者模式？`
+
+https://juejin.cn/post/6844903822247264269
+https://zhuanlan.zhihu.com/p/45081605 -->
+
+# 观察者模式
+
+流程：
+1. `观察者`订阅`观察目标`
+2. `观察目标`通知`观察者`，`观察者`进行处理
+
