--- a/docs/01.前端/02.Vue/01.Vue2/01.观察者模式.md
+++ b/docs/01.前端/02.Vue/01.Vue2/01.观察者模式.md
@@ -46,8 +46,9 @@ https://zhuanlan.zhihu.com/p/45081605 -->
 # Vue的观察者模式
 
 -   观察目标:`Dep`，`每个数据对象`都绑定一个`Dep实例`
-    -   `Dep`拥有一个`subscribers队列`，存储着`观察者列表`
+    -   `Dep`拥有一个`subs队列`，存储着`观察者列表`
     -   `Dep`拥有一个`notify`方法，用于通知观察者
     -   辅助类：`Observer`，将观察目标转化为`可观测数据`，生成`Dep实例`
 -   观察者：`Watcher`，将`每个响应式函数（如render）`包装成一个`Watcher`实例
 
+[前方的区域以后再来探索吧]https://zhuanlan.zhihu.com/p/45081605
