--- a/docs/04.工具/02.可视化工具/01.杂项.md
+++ b/docs/04.工具/02.可视化工具/01.杂项.md
@@ -17,3 +17,4 @@ tags:
 [haroopad](http://pad.haroopress.com/) : markdown工具
 [drawio](https://github.com/jgraph/drawio-desktop) : 画图工具
 [screenToGif](https://www.screentogif.com/) : GIF录制工具
+[neat-reader](https://www.neat-reader.cn/) : epud阅读器
