--- a/docs/01.前端/01.React/02.SWR/03.传入参数.md
+++ b/docs/01.前端/01.React/02.SWR/03.传入参数.md
@@ -11,22 +11,34 @@ tags:
 ---
 # 重复请求去重的坑
 
-`swr`默认具有`请求自动去重`的功能，这是它的卖点之一。但这种去重基于的`key值`通常是`url地址`。
+在生产环境下，我们常常需要携带用户的信息进行请求，`cookie或是access_token`。那么我们假设这样一种情况。
+
+- 进入某个页面时，我们需要携带`access_token`进行请求数据，但`access_token`过期了，请求失败。
+- 手动获取`access_token`，并更新本地的`access_token`
+- 根据新的`access_token`重新获取数据
+
+根据swr的模式，我们将请求数据放在子组件中进行管理
+
+<<< @\codes\swr\src\pages\oauth.jsx#data
+
+我们手动获取一个有效的`token`，并给出一个按钮手动更新，更新完成后重新渲染组件，重新发出请求
+
+<<< @\codes\swr\src\pages\oauth.jsx#page
+
+
+我们先采用第一种传参方式，发现我们携带token的第二次请求没有成功发出
 ```js
-// useSwr的第一个参数会作为去重的key值，通常会作为url地址传入fetcher
-useSWR('/api/user', fetcher) 
+const { data } = useSWRImmutable(url, () => fetcher(url, options))
 ```
 
-那么如果我们要给我们的`请求头header`增加一个授权的`token`时，这是一种**错误写法**：
+![](https://linyc.oss-cn-beijing.aliyuncs.com/bad.gif)
+
+原因是useSwr的`缓存key值`是url地址，虽然请求的头部不同，但key值相同，所以swr决定使用缓存的数据，并不发出第二次请求。
+
+
+**正确的做法是：将参数和url地址包裹在一个数组中传入useSwr方法。**，将`header`等参数一同作为key值来缓存，可以识别出两次请求是不同的请求。
 ```js
-useSWR('/api/user', url => fetchWithToken(url, token))
+  const { data } = useSWRImmutable([url, options], fetcher)   
 ```
-因为`缓存key`值依然是`/api/user`，swr判断它是重复的请求，依然返回给我们缓存中的数据
 
-
-# 数组传参
-我们需要使用一个数组作为参数`key`，以此来达到我们的效果
-
-```js
-const { data: user } = useSWR(['/api/user', token], fetchWithToken)
-```
+![](https://linyc.oss-cn-beijing.aliyuncs.com/good.gif)
