--- a/docs/01.前端/01.React/01.进阶/05.useReducer.md
+++ b/docs/01.前端/01.React/01.进阶/05.useReducer.md
@@ -10,20 +10,38 @@ tags:
   - 
 ---
 
-`useReducer`和`useState`很相似，你可以认为它是用来进行**复杂数据处理**的方法。
-
+`useReducer`和`useState`很相似，你可以认为它是用来进行**复杂数据处理**的方法。比如一个state有多个需要独立维护的子对象。
 
 方法结构如下：
 
-`useReducer(reducer , initialState , initializer)`
+`const[state,dispatch] = useReducer(reducer , initialState , initializer)`
 
-- reducer: `Function`类型，接收**信号action或状态state**，生成新的`状态state`
-- initalState : 基本数据类型，初始state
+- state : 基本数据类型 , 当前状态
+- dispatch ：`Function`类型，发信器，向`reducer`发出`信号action`。通常结构为`dispatch({type , value})`，`type`用于表示信号类型，`value`用来表示待处理的数据
+- reducer: `Function`类型，接收**信号action和状态state**，`信号action`通常包含待处理的数据，并以此生成`新的状态state`
+- initalState : 基本数据类型，初始状态
 - initalizer ： 可选，不常用
 
+我们先用`useState`来编写一个简单的选择器例子
 
+<<< @\codes\react-demo\src\pages\react18\useState.jsx
 
+![](https://linyc.oss-cn-beijing.aliyuncs.com/useState.gif)
 
-[参考链接](https://www.react.express/hooks/usereducer)
+接下来我们用`useReducer`来进行改写：
 
-【可以写一个useState例子，然后用useReducer来改写】
+1. 编写初始State结构`initalState`
+
+<<< @\codes\react-demo\src\pages\react18\useReducer.jsx#initalState
+
+2. 定义`信号`的类型，并以此定义`reducer`
+
+<<< @\codes\react-demo\src\pages\react18\useReducer.jsx#reducer
+
+3. 调用`useReducer`生成`状态state和发信器dispatch`
+
+<<< @\codes\react-demo\src\pages\react18\useReducer.jsx#useReducer
+
+4. 在用户交互的地方发出信号，让`reducer`处理并生成新的`state`
+
+<<< @\codes\react-demo\src\pages\react18\useReducer.jsx#dispatch{6,14-16}
