--- a/docs/01.前端/01.React/02.SWR/03.传入参数.md
+++ b/docs/01.前端/01.React/02.SWR/03.传入参数.md
@@ -19,11 +19,11 @@ tags:
 
 根据swr的模式，我们将请求数据放在子组件中进行管理
 
-<<< @\codes\swr\src\pages\oauth.jsx#data
+<<< @\codes\react-demo\src\pages\swr\oauth.jsx#data
 
 我们手动获取一个有效的`token`，并给出一个按钮手动更新，更新完成后重新渲染组件，重新发出请求
 
-<<< @\codes\swr\src\pages\oauth.jsx#page
+<<< @\codes\react-demo\src\pages\swr\oauth.jsx#page
 
 
 我们先采用第一种传参方式，发现我们携带token的第二次请求没有成功发出
