--- a/docs/01.前端/01.React/01.进阶/02.Transition.md
+++ b/docs/01.前端/01.React/01.进阶/02.Transition.md
@@ -16,11 +16,11 @@ tags:
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/transition.gif)
 
-接下来让我们介绍`Transition`
+这是如何实现的呢？接下来让我们介绍`Transition`
 
 # 起步
 
-`Transition`是React18中新增的特性，意为`过渡`，为了了解它的作用，我们需要先介绍`React18`新引进的两个概念`concurrent模式`和`legacy模式`。
+`Transition`是React18中新增的特性，为了了解它的作用，我们需要先介绍`React18`新引进的两个概念`concurrent模式`和`legacy模式`。
 
 ### legacy模式
 
@@ -48,7 +48,13 @@ const root =  ReactDOM.createRoot(document.getElementById('app'))
 root.render(<App/>)
 ```
 
-`concurrent`意为“并发的”，是v18新增的一种渲染模式。所有的渲染更新被分为了两种：`高优先级`与`低优先级`。并且渲染**可以被中断**。
+::: danger
+如果没有将root使用`createRoot`方式创建，`startTransition`方式将无效
+:::
+
+`concurrent`意为“并发的”，是v18新增的一种渲染模式。所有的渲染更新被分为了两种：`高优先级`与`低优先级`。并且**低优先级渲染可以被中断**。
+
+# 应用
 
 我们假设这样一种情况：用户对一个庞大数据的列表进行筛选操作。
 
@@ -66,11 +72,33 @@ root.render(<App/>)
 -  列表数据非常庞大，需要大量计算，在计算渲染的过程中，用户进行了第二次、第三次输入。
 -  因为两种渲染需求具有相同的优先级，所以用户的第二次输入会被“卡住”，等待列表渲染完成后才执行。因此用户会感觉到自己的输入过程**十分卡顿**
 
-我们先用传统方法编写一遍：
+**我们先用传统方法编写一遍：**
 
 <<< @\codes\react-demo\src\pages\react18\transition\debounce\old.jsx
 
+![](https://linyc.oss-cn-beijing.aliyuncs.com/transition.gif)
+
+根据录屏可见，我们的输入被列表的渲染给严重拖后了。
+
+**接下来我们采用startTransition方式进行改写**
 
 接下来我们明确一下对这个案例的渲染原则：**用户应该看到自己输入的信息被实时的更新，筛选后的列表渲染则可以放在更低的优先级上**。
 
+设计：
+1. 原先由一个state : `searchKey`来同时控制input框的值渲染和列表渲染，为了区分优先级，我们分成两个state : `inputValue（input框输入值）`和`searchKey（控制列表渲染）`
+2. 我们将`searchKey`的控制放入`startTransition`函数中，将与其相关的后续渲染更新标识为低优先级任务
 
+<<< @\codes\react-demo\src\pages\react18\transition\debounce\new.jsx#Debounce{2-3,14-20,26}
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/transition_new.gif)
+
+顺畅的输入！
+
+### 如果没有createRoot
+
+我们可以通过`useTransition`方法临时使用`concurrent特性`。
+
+<<< @\codes\react-demo\src\pages\react18\transition\index.jsx
+
+
+[推荐文章](https://juejin.cn/post/6844903986420514823#heading-5)
