--- a/docs/04.工具/02.可视化工具/01.杂项.md
+++ b/docs/04.工具/02.可视化工具/01.杂项.md
@@ -18,3 +18,4 @@ tags:
 [drawio](https://github.com/jgraph/drawio-desktop) : 画图工具
 [screenToGif](https://www.screentogif.com/) : GIF录制工具
 [neat-reader](https://www.neat-reader.cn/) : epud阅读器
+[carnac](http://code52.org/carnac/) : 将键盘输入展示在屏幕上
