--- a/docs/01.前端/01.React/01.进阶/02.Transition.md
+++ b/docs/01.前端/01.React/01.进阶/02.Transition.md
@@ -16,7 +16,7 @@ tags:
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/transition.gif)
 
-这是如何实现的呢？接下来让我们介绍`Transition`
+这里我们引入了一个新的概念`transition`。我们会先介绍它，然后再说明为什么它可以解决`Suspense`的闪烁问题。
 
 # 起步
 
@@ -98,7 +98,27 @@ root.render(<App/>)
 
 我们可以通过`useTransition`方法临时使用`concurrent特性`。
 
-<<< @\codes\react-demo\src\pages\react18\transition\index.jsx
+<<< @\codes\react-demo\src\pages\react18\transition\useTransition.tsx
 
 
-[推荐文章](https://juejin.cn/post/6844903986420514823#heading-5)
+# 回到开头
+
+为什么`startTransition`可以解决`Suspense`的闪烁问题？
+
+我们已经知道，`startTransition`的作用是将**一个函数及其影响的后续render转换为低优先级任务，并且可被高优先级任务抢占执行。**
+
+值得注意的是，在其渲染任务被抢占执行时，已经渲染的部分**并非被丢弃，而是保存在了内存中**，等待全部渲染完成后，它才换真正注入dom树中展示出来。
+
+简而言之，**你可以将低优先级渲染任务作为一个整体，它会在内存中不断被暂停，再执行。**在其全部完成之前，页面会一直保持着旧UI，直到新UI完成。
+
+切换tab标签成为一个整体任务，其流程为：
+1. `setTab`,更新state状态
+2. 懒加载引入`Comments`
+
+虽然`setTab`很快完成，但在懒加载完成之前，依然会保持旧UI不变 --- 因此，画面上看到的依然是`旧的tab标签和其内容Photos组件`
+
+全部代码：
+
+<<< @\codes\react-demo\src\pages\react18\transition\lazyload_optimization.jsx
+
+
