--- a/docs/01.前端/01.React/01.进阶/05.ref.md
+++ b/docs/01.前端/01.React/01.进阶/05.ref.md
@@ -20,7 +20,7 @@ tags:
 
 在实际场景中，我们常常**用ref来获取DOM组件的实例**，接下来我们主要对这种场景进行讨论
 
-### 基本使用
+# 基本使用
 
 `createRef`，`useRef`功能一致：创建一个ref对象。分别为`React.API`的写法与`hooks`的写法
 
@@ -36,4 +36,63 @@ tags:
 
 
 
+# 子组件Ref实例获取
 
+### React Component
+
+获取React组件的实例较为简单，组件会自动接收父元素传递的ref属性，绑定this并传递回父组件。
+
+<<< @\codes\react-demo\src\pages\react18\ref\component-class.jsx
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/20220429105541.png)
+
+### Function Component 
+
+纯函数组件是不存在所谓`实例`的.如果我们为一个纯函数组件绑定ref属性，会得到如下报错信息
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/20220429092732.png)
+
+但React从引入`hooks`后就推崇使用纯函数组件了，在这种情况下我们就无法使用`ref`了吗？当然不是，用如下两个方法配合使用，可以解决绝大多数应用场景：`forwardRef`和`useImperativeHandle`。
+
+##### forwardRef
+
+对`forwardRef`，官方是这样定义的：它能够通过一个组件自动传递`ref`给它的一个children。**它可以让一个组件拿到他们接收的ref属性值**，并且能够再向下传递（换言之，`forward`它）。
+
+我们以获取子属性的`DOM元素`为例 ， 使用流程如下：
+1. 父组件给子组件间绑定上`ref`属性
+2. 用`forwardRef`将子组件包裹起来，并在第二个参数上传递一个`ref属性`
+**3. 将`ref`绑定到某一个`DOM元素`上**
+4. 在父组件上使用获取到的`ref`实例
+
+<<< @\codes\react-demo\src\pages\react18\ref\forwardRef.jsx
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/20220429110541.png)
+
+::: tip
+如果你觉得`forwardRef`包裹组件并传递ref属性的写法看起来有些变扭，可以看一下[HOC（高阶组件）](/pages/1aa093/)章节，两者类似。
+:::
+
+##### useImperativeHandle
+
+`use-imperative-handle`直译为**用来处理重要紧急的任务**。它主要和`forwardRef`配合使用。它可以自定义一个实例对象及其属性值，并将其挂载在组件的ref上。
+
+使用流程如下：
+
+1. 父组件给子组件间绑定上`ref`属性
+2. 用`forwardRef`将子组件包裹起来，并在第二个参数上传递一个`ref属性`
+**3. 将`ref`传递进`useImperativeHandle`方法，将ref替换成一个新的自定义的实例对象**
+4. 在父组件上使用获取到的`ref`实例
+
+<<< @\codes\react-demo\src\pages\react18\ref\useImperativeHandle.jsx
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/20220429110624.png)
+
+总结： 
+- 如果你需要获取子组件的`DOM元素`实例，那么使用`forwardRef`就可以满足需求
+- 如果你想要获取子组件的`属性或方法`，那么需要使用`useImperativeHandle`
+
+# 为什么要谨慎使用ref
+
+我们在开发组件时通常会将组件当成是一个**黑盒**，只通过其对外暴露的接口对其操作，而对其内部具体的实现逻辑不明。通过接口操作类实例而不是直接操作类实例通常可以更安全的进行开发---这意味着问题的发生只可能出现在暴露接口中。
+
+但`ref`打破了这个规则，它允许我们直接操作组件的实例对象，` 方法、属性、原型链...` ，这代表组件开发者无法控制问题出现的位置，而使用者又不了解组件的详细信息，所以产生问题的可能性会大大增加。
