--- a/docs/01.前端/01.React/01.进阶/04.HOC.md
+++ b/docs/01.前端/01.React/01.进阶/04.HOC.md
@@ -14,6 +14,89 @@ tags:
 
 `higher-order component` : 高阶组件指的是一种**React组件设计模式**，它的实质是用一个函数**接收一个类，添加一些内容，返回一个新类**。其本质就是一个**包装器（装饰器）**。
 
-### forwarding refs
+# 基本使用
 
-使用`ref`来获取原生组件的实例是件方便的事情，但对自定义组件
+我们以一个简单的例子来介绍它：
+
+假设我们要为当前组件绑定上一个日志系统，显然这是一个公共系统可以用于任何组件上，那么我们可以这样将其提取出来成为一个包装器：
+
+<<< @\codes\react-demo\src\pages\react18\HOC\index.jsx
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/20220429115044.png)
+
+:::tip
+关于传递`props`：它将先以`props`属性传入包装器中，再通过`<Component {...this.props} />` 传入子组件上。
+:::
+
+# 使用@语法糖
+
+```js
+LogWrapper(Hoc)
+// change to 
+
+@LogWrapper
+class Hoc extends Component {
+```
+
+**@语法糖是一种简写方式，会将后面的类作为第一个参数传入方法中，当有多个装饰器时，阅读感比多层嵌套更为舒适**，如：
+```js
+
+PropertyWrapper(LogWrapper(Hoc))
+
+@PropertyWrapper
+@LogWrapper
+class Hoc extends Component {
+
+```
+
+### 配置
+
+1.  如果你使用了ts语法，为了使用@语法糖需要在`tsconfig.json/jsconfig.json`中进行配置，配置如下：
+```json
+{
+  "compilerOptions": {
+    "experimentalDecorators" : true
+  },
+}
+```
+
+2.  如果你使用的代码编辑器是`vscode`，还需要在设置中这样修改：
+- 打开设置： `preferences -> settings`
+- 启用`experimentalDecorators` : 搜索`enable/disable experimentalDecorators`，并**打勾**
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/20220429141627.png)
+
+
+# @语法糖要怎样传递参数
+
+前面说到@语法糖会将后面的类作为**第一个参数**传入方法中，如果我们想要传入更多参数，需要**再包装一层函数**，函数的作用是**返回一个包装器**：
+
+<<< @\codes\react-demo\src\pages\react18\HOC\params.jsx{22-24}
+
+
+# 应用：一个简陋的redux模型
+
+<<< @\codes\react-demo\src\pages\react18\HOC\redux.jsx
+
+# 关于React developer tools调试HOC
+
+打开浏览器调试插件，你会在调试器窗口里看到这样的结构：
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/20220429150441.png)
+
+为了便于调试，可以为组件新增一个静态属性`displayName`，展示：
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/20220429150457.png)
+
+
+# 关于实例的获取
+
+我们通常会使用`ref`来获取子组件的实例，但如果是一个被HOC包裹的子组件呢？是的，ref会指向HOC而非指向真正的子组件。为了解决这个问题，我们需要使用`forwardRef`，如果你还不清楚`ref`相关的只是，可以参考我的这篇文章[react中的ref](/pages/cda0c4/)。
+
+具体原理就是通过`forwardRef`主动获取`ref属性`，往下传递直到真正的子组件
+
+实际上是三层模型：
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/20220429160446.png)
+
+<<< @\codes\react-demo\src\pages\react18\HOC\ref.jsx
