--- a/docs/01.前端/02.Vue/01.Vue2/01.观察者模式.md
+++ b/docs/01.前端/02.Vue/01.Vue2/01.观察者模式.md
@@ -9,16 +9,6 @@ categories:
 tags:
   - 
 ---
-<!-- # 前言
-
-Vue实现的两大核心是`数据驱动和组件系统`，其中数据驱动是靠`响应式对象`来实现的，即：
--   检测数据的变化
--   局部更新DOM树
-
-我们这节只来讨论第一点`如何检测数据的变化`，即`如何实现观察者模式？`
-
-https://juejin.cn/post/6844903822247264269
-https://zhuanlan.zhihu.com/p/45081605 -->
 
 # 观察者模式
 
@@ -48,18 +38,22 @@ https://zhuanlan.zhihu.com/p/45081605 -->
 -   对于没有变更的`data属性`不应该触发渲染，所以需要转换每一个`data`对象的子属性成为观察目标，包括`嵌套对象`。使用递归来实现。
 
 核心函数`wrapper`，转化`data`为可观测对象
+
 <<< @\codes\javaScript\observer-model\render.js#wrapper
 
 整体实现：
+
 <<< @\codes\javaScript\observer-model\render.js
 
 
 # Vue的观察者模式
 
--   观察目标:`Dep`，`每个数据对象`都绑定一个`Dep实例`
+要学习Vue的观察者模式，我们还需要一些关于`闭包`的知识。
+
+
+<!-- -   观察目标:`Dep`，`每个数据对象`都绑定一个`Dep实例`
     -   `Dep`拥有一个`subs队列`，存储着`观察者列表`
     -   `Dep`拥有一个`notify`方法，用于通知观察者
     -   辅助类：`Observer`，将观察目标转化为`可观测数据`，生成`Dep实例`
--   观察者：`Watcher`，将`每个响应式函数（如render）`包装成一个`Watcher`实例
+-   观察者：`Watcher`，将`每个响应式函数（如render）`包装成一个`Watcher`实例 -->
 
-[前方的区域以后再来探索吧]https://zhuanlan.zhihu.com/p/45081605
