feat: 观察者模式

--- a/docs/01.前端/02.Vue/01.Vue2/01.观察者模式.md
+++ b/docs/01.前端/02.Vue/01.Vue2/01.观察者模式.md
@@ -50,6 +50,11 @@ tags:
 
 要学习Vue的观察者模式，我们还需要一些关于`闭包`的知识。
 
+前方的区域以后再来探索吧...
+
+https://www.cnblogs.com/moon3/p/12200807.html
+https://juejin.cn/post/6844903901003513863
+https://juejin.cn/post/7049359043936288805
 
 <!-- -   观察目标:`Dep`，`每个数据对象`都绑定一个`Dep实例`
     -   `Dep`拥有一个`subs队列`，存储着`观察者列表`
