--- a/docs/01.前端/02.Vue/01.Vue2/02.data.md
+++ b/docs/01.前端/02.Vue/01.Vue2/02.data.md
@@ -8,7 +8,10 @@ categories:
   - Vue2
 tags:
   - 
----
+---- [data的两种定义方式](#data的两种定义方式)
+- [为什么组件中，data必须是函数？](#为什么组件中data必须是函数)
+
+
 # data的两种定义方式
 
 类型： `Object`
@@ -46,3 +49,4 @@ var Component = Vue.extend({
 
 
 <!-- 这是因为vue的数据流是基于**双向绑定**实现的，具体实现方法是使用[Proxy](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Proxy)递归的将data的属性定义好`getter和setter`，从而使`data`可以响应数据的变化来渲染页面 -->
+
