--- a/docs/01.前端/01.React/04.recoil/01.入门.md
+++ b/docs/01.前端/01.React/04.recoil/01.入门.md
@@ -12,39 +12,42 @@ tags:
 
 # 简介
 
-`recoil`和 `redux`一样，是`react`的一个状态管理库。它想采用类react的形式来实现一个状态管理工具。因此它定义了一个`有向图`，数据流为`atom` ---> `selector` ---> 组件。你可以通过和React类似的`get/set`方法来操作`atom`和`selector`.
+<!-- `recoil`和 `redux`一样，是`react`的一个状态管理库。它想采用类react的形式来实现一个状态管理工具。因此它定义了一个`有向图`，数据流为`atom` ---> `selector` ---> 组件。你可以通过和React类似的`get/set`方法来操作`atom`和`selector`. -->
 
-`atom` === state
+<!-- `atom` === state
 `selector` === set方法
 
 是不是很像hooks？ 
 
 使用它，你可以获得：
 - React18出现的`Concurrent模式`
-- 将本地的state无缝替换成`recoil状态`
+- 将本地的state无缝替换成`recoil状态` -->
 
 ### atom
 
 它是状态的单位，可以使用`atom`直接替代组件内部的state，多个组件可以使用同一个`atom`，这意味着这些组件共享着同一个状态。
 
-我们使用官方的示例来快速理解`atom`: 
-
-##### 新建`atom`:
+我们要做的，只是将`useState`改写一下罢了
 ```js
+const [fontSize , setFontSize] = useState(14) 
+
 const fontSizeState = atom({
-  key: 'fontSizeState', // 唯一键值
+  key: "fontSizeState",
   default: 14,
 });
+const [fontSize, setFontSize] = useRecoilState(fontSizeState);
 ```
 
-##### 读取写入`atom`:
-```js
-function FontButton() {
-  const [fontSize, setFontSize] = useRecoilState(fontSizeState);
-  return (
-    <button onClick={() => setFontSize((size) => size + 1)} style={{fontSize}}>
-      Click to Enlarge
-    </button>
-  );
-}
-```
+我们使用官方的示例来快速理解`atom`: 
+
+<<< @\codes\react-demo\src\pages\recoil\begin\atom.jsx
+
+
+### Selector
+
+对于`Selector` , 你可以直接把他看作是`Vue的computed`，它接受一个`atom`或者其他`selector`，用于计算**state的派生数据**
+
+官方的实例：
+
+<<< @\codes\react-demo\src\pages\recoil\begin\selector.jsx
+
