--- a/docs/01.前端/01.React/04.recoil/02.Selector详解.md
+++ b/docs/01.前端/01.React/04.recoil/02.Selector详解.md
@@ -40,3 +40,12 @@ function selector<T>({
 
 # 异步Selectors
 
+想象这样一种场景：用户进入一个商品的详情页面，从路由里取出商品ID，用该ID去数据库查询相应的信息并渲染。
+
+在这种情况下，我们需要一个**异步的Selectors**，用来返回等待数据库返回需要的信息。
+
+变动点：
+- 在`get`方法中使用`async和await`包裹数据库请求，并返回请求结果
+- 通过`React.Suspense`组件来渲染请求请求未返回时的展示数据
+
+<<< @\codes\react-demo\src\pages\recoil\selector\async.jsx
