--- a/docs/01.前端/01.React/01.进阶/08.suspense.md
+++ b/docs/01.前端/01.React/01.进阶/08.suspense.md
@@ -6,6 +6,7 @@ categories:
   - 前端
   - React
   - 进阶
+  - 未完成
 tags:
   - 
 ---
@@ -34,5 +35,5 @@ tags:
 -   若`throw`出其他对象，不由`Suspense`处理，继续向外层抛出错误，可以自定义`ErrorBoundary`来处理。
 -   若`return `一个值，则视为请求完成，继续组件的渲染。
 
-<<< @\codes\react-demo\src\pages\react18\suspense.jsx
+<<< @\codes\react-demo\src\pages\react18\suspense\suspense.jsx
 
