--- a/docs/01.前端/02.Vue/01.Vue核心概念/02.响应式原理.md
+++ b/docs/01.前端/02.Vue/01.Vue核心概念/02.响应式原理.md
@@ -12,7 +12,7 @@ tags:
 
 # 为什么需要响应式结构
 
-Vue会将`data对象`的每一个属性使用`Object.defineProperty`转化为`getter/setter`。当我们访问某一个属性时，就会通知`Watcher`类，并由它及其后续函数来实现页面的重新渲染。
+Vue会将`data对象`的每一个属性使用`Object.defineProperty`转化为`getter/setter`（Vue3中使用的是`Proxy`）。当我们访问某一个属性时，就会通知`Watcher`类，并由它及其后续函数来实现页面的重新渲染。
 
 ![](https://cn.vuejs.org/images/data.png)
 
