--- a/docs/01.前端/02.Vue/02.Vue3/01.响应式API/01.refs.md
+++ b/docs/01.前端/02.Vue/02.Vue3/01.响应式API/01.refs.md
@@ -34,3 +34,56 @@ tags:
 想要访问`ref对象`需要以`ref.value`进行取值，我们可以方便的用`unref`函数进行解耦操作。
 
 <<< @\codes\vue-demo\pages\vue3\ref\unref.vue
+
+# toRef
+
+该方法在处理响应式对象的**可选属性**上很有用，能够将可选属性转成空的`ref对象`，以便在后续函数中做统一化处理：
+
+<<< @\codes\vue-demo\pages\vue3\ref\toRef.vue
+
+# toRefs
+
+假设这样一种场景：我们使用`reactive函数`生成了一些响应式对象，我们希望单独操作它的某个属性，我们习惯性的用`Es6`的解构语法获取属性并对其操作：
+
+<<< @\codes\vue-demo\pages\vue3\ref\toRefs\bad.vue
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/torefs.gif)
+
+遗憾的是：**使用解构的 property 的响应性都会丢失**。
+
+为了解决这个问题，我们需要将响应式对象转化为一组`ref对象`，使用`toRefs`
+
+<<< @\codes\vue-demo\pages\vue3\ref\toRefs\good.vue{15,20-22}
+
+# customRef
+
+
+`customRef`的原理就是`ES6的Proxy`，我们先来看一个`Proxy`例子：
+
+<<< @\codes\javaScript\es6\proxy\vue.js
+
+`customRef函数`将复杂的依赖操作包含在`track和trigger`中，并允许我们在`getter/setter`时除了更新依赖外有了更多的可操作空间
+
+<<< @\codes\vue-demo\pages\vue3\ref\customRef\index.vue
+
+:::tip
+`track`，`trigger`方法的功能是收集和触发依赖（更新页面）.
+
+关于依赖，详见[响应式原理](/pages/984d41/)
+:::
+
+官方的防抖例子：
+
+<<< @\codes\vue-demo\pages\vue3\ref\customRef\debounce.vue
+
+
+假设场景：`v-model = "data"`用户连续输入【123】，流程如下：
+1.  用户输入**1**，input框渲染用户输入的值**1**。自定义ref触发了`set`方法，进入`setTimeout`
+2.  用户输入**123**,input框渲染用户输入的值**123**。自定义ref触发了`set`方法，清除定时器并重新计时
+3.  计时器到时，修改`data`，触发`trigger`渲染。input框的`value`值发生改变，input框渲染`data`的数据**123**。
+
+:::tip
+原生input框的渲染原则：
+  1.  `value`属性变动，渲染`value属性值`
+  2.  `value`属性不变，渲染用户输入的值 
+:::
