--- a/docs/01.前端/02.Vue/02.Vue3/01.响应式API/01.refs.md
+++ b/docs/01.前端/02.Vue/02.Vue3/01.响应式API/01.refs.md
@@ -16,7 +16,7 @@ tags:
 
 # 基本使用
 
-<<< @\codes\vue-demo\pages\vue3\ref\baseUse.vue
+<<< @\codes\vue-demo\pages\vue3\ref\index.vue
 
 `ref(Object)`是原有对象的引用，修改原有对象和ref对象实际上操作的是同一对象。
 
@@ -87,3 +87,17 @@ tags:
   1.  `value`属性变动，渲染`value属性值`
   2.  `value`属性不变，渲染用户输入的值 
 :::
+
+# shallowRef
+
+直译为**浅层ref**，意味着只有直接改变ref对象的value值会进行响应式更新，若ref对象是个`Object`，改变`Object`内的属性值不会触发渲染更新。
+
+<<< @\codes\vue-demo\pages\vue3\ref\shallowRef.vue
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/shallowRef.gif)
+
+# triggerRef
+
+配合[WatchEffect](/pages/f8fb4f/)手动监听`shallowRef`的数据变化。
+
+参考官网例子即可，暂时没想到`shallowRef和triggerRef`的应用场景。
