--- a/docs/01.前端/01.React/01.进阶/03.useReducer.md
+++ b/docs/01.前端/01.React/01.进阶/03.useReducer.md
@@ -10,6 +10,8 @@ tags:
   - 
 ---
 
+# 基本使用
+
 `useReducer`和`useState`很相似，你可以认为它是用来进行**复杂数据处理**的方法。比如一个state有多个需要独立维护的子对象。
 
 方法结构如下：
@@ -18,13 +20,13 @@ tags:
 
 - state : 基本数据类型 , 当前状态
 - dispatch ：`Function`类型，发信器，向`reducer`发出`信号action`。通常结构为`dispatch({type , value})`，`type`用于表示信号类型，`value`用来表示待处理的数据
-- reducer: `Function`类型，接收**信号action和状态state**，`信号action`通常包含待处理的数据，并以此生成`新的状态state`
+- reducer: `Function`类型，接收**状态state和信号action**，`信号action`通常包含待处理的数据，并以此生成`新的状态state`
 - initalState : 基本数据类型，初始状态
 - initalizer ： 可选，不常用
 
 我们先用`useState`来编写一个简单的选择器例子
 
-<<< @\codes\react-demo\src\pages\react18\useState.jsx
+<<< @\codes\react-demo\src\pages\react18\useReducer\useState.jsx
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/useState.gif)
 
@@ -36,7 +38,7 @@ tags:
 
 2. 定义`信号`的类型，并以此定义`reducer`
 
-<<< @\codes\react-demo\src\pages\react18\useReducer.jsx#reducer
+<<< @\codes\react-demo\src\pages\react18\useReducer\index.jsx#reducer
 
 3. 调用`useReducer`生成`状态state和发信器dispatch`
 
@@ -45,3 +47,5 @@ tags:
 4. 在用户交互的地方发出信号，让`reducer`处理并生成新的`state`
 
 <<< @\codes\react-demo\src\pages\react18\useReducer.jsx#dispatch{6,14-16}
+
+# 强制刷新
