--- a/docs/01.前端/01.React/01.进阶/03.useReducer.md
+++ b/docs/01.前端/01.React/01.进阶/03.useReducer.md
@@ -34,18 +34,18 @@ tags:
 
 1. 编写初始State结构`initalState`
 
-<<< @\codes\react-demo\src\pages\react18\useReducer.jsx#initalState
+<<< @\codes\react-demo\src\pages\react18\useReducer\index.jsx#initalState
 
-2. 定义`信号`的类型，并以此定义`reducer`
+1. 定义`信号`的类型，并以此定义`reducer`
 
 <<< @\codes\react-demo\src\pages\react18\useReducer\index.jsx#reducer
 
 3. 调用`useReducer`生成`状态state和发信器dispatch`
 
-<<< @\codes\react-demo\src\pages\react18\useReducer.jsx#useReducer
+<<< @\codes\react-demo\src\pages\react18\useReducer\index.jsx#useReducer
 
 4. 在用户交互的地方发出信号，让`reducer`处理并生成新的`state`
 
-<<< @\codes\react-demo\src\pages\react18\useReducer.jsx#dispatch{6,14-16}
+<<< @\codes\react-demo\src\pages\react18\useReducer\index.jsx#dispatch{6,14-16}
 
 # 强制刷新
