--- a/docs/01.前端/01.React/01.进阶/09.ErrorBoundary.md
+++ b/docs/01.前端/01.React/01.进阶/09.ErrorBoundary.md
@@ -6,7 +6,6 @@ categories:
   - 前端
   - React
   - 进阶
-  - 未完成
 tags:
   - 
 ---
@@ -28,15 +27,17 @@ tags:
 
 ### componentDidCatch
 
+在新版本中，推荐在这里进行一些日记打印，而将state更新与渲染的相关逻辑放至`getDerivedStateFromError`中。
 
 ::: warn
 在开发模式下，错误会冒泡至 `window`，这意味着任何 `window.onerror` 或 `window.addEventListener('error', callback)` 会中断这些已经被 `componentDidCatch()` 捕获的错误。
 :::
 
 
-
-
-
 ### static getDerivedStateFromError
 
 直译： **从错误中获取派生的状态**。主要用于修改state，并根据state展示**降级UI**
+
+# 基本使用例子
+
+<<< @\codes\react-demo\src\pages\react18\errorBoundary.jsx
