--- a/docs/01.前端/01.React/04.recoil/02.Selector详解.md
+++ b/docs/01.前端/01.React/04.recoil/02.Selector详解.md
@@ -60,3 +60,30 @@ function selector<T>({
 - 通过`React.Suspense`组件来渲染请求请求未返回时的展示数据
 
 <<< @\codes\react-demo\src\pages\recoil\selector\async.jsx
+
+
+# selectorFamily
+
+你可能注意到，我们开篇给出的`Selector`结构中，并没有给出传入参入的入口。因此，我们想要实现动态传参需要一个新的方法`selectorFamily`
+
+先给出定义：
+
+```js
+function selectorFamily<T, Parameter>({
+  key: string, 
+
+  get: Parameter => ({get: GetRecoilValue}) => Promise<T> | RecoilValue<T> | T,
+
+  set?: Parameter => (
+    {
+      get: GetRecoilValue,
+      set: SetRecoilValue,
+      reset: ResetRecoilValue,
+    },
+    newValue: T | DefaultValue,
+  ) => void,
+
+  dangerouslyAllowMutability?: boolean,
+}): Parameter => RecoilState<T>
+```
+
