--- a/docs/01.前端/02.Vue/02.Vue3/01.响应式API/02.reactive.md
+++ b/docs/01.前端/02.Vue/02.Vue3/01.响应式API/02.reactive.md
@@ -15,6 +15,6 @@ tags:
 
 `reactive`相当于`ref`实现过程中的一个函数，它会`Object`对象**递归**套上`Proxy`,使得修改它时能够触发响应式更新（如渲染、computed属性计算等）。
 
-<<< @\codes\vue-demo\pages\vue3\reactive\index.vue
+<<< @\codes\vue-demo\pages\vue3\ref\reactive\index.vue
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220504155953.png)
