edit category and tags

--- a/docs/01.前端/01.React/01.进阶/05.ref.md
+++ b/docs/01.前端/01.React/01.进阶/05.ref.md
@@ -5,9 +5,8 @@ permalink: /pages/cda0c4/
 categories:
   - 前端
   - React
-  - 进阶
 tags:
-  - 
+  - React
 ---
 
 在各种例子中，我们会见到很多react中和`ref`相关的方法：`useRef,forwardref,createRef,callback ref ....`，在这里对这些方法做一个总结。
