--- a/docs/01.前端/02.Vue/02.Vue3/02.组合式API/00.简介.md
+++ b/docs/01.前端/02.Vue/02.Vue3/02.组合式API/00.简介.md
@@ -4,11 +4,11 @@ date: 2022-04-24 17:19:05
 permalink: /pages/d980b2/
 categories:
   - 前端
+  - Vue
   - Vue3
-  - 基础使用
-  - 组合式API
 tags:
-  - 
+  - Vue3
+  - Vue
 ---
 
 # 什么是组件式API？
