--- a/docs/01.前端/02.Vue/02.Vue3/02.组合式API/01.setup语法糖.md
+++ b/docs/01.前端/02.Vue/02.Vue3/02.组合式API/01.setup语法糖.md
@@ -5,10 +5,10 @@ permalink: /pages/4b0a99/
 categories:
   - 前端
   - Vue3
-  - 基础使用
-  - 组合式API
+  - Vue
 tags:
-  - 
+  - Vue3
+  - Vue
 ---
 
 # 首先，让我们来介绍一下setup
