--- a/docs/01.前端/01.React/01.进阶/02.Transition.md
+++ b/docs/01.前端/01.React/01.进阶/02.Transition.md
@@ -5,9 +5,8 @@ permalink: /pages/9b2961/
 categories:
   - 前端
   - React
-  - 进阶
 tags:
-  - 
+  - React
 ---
 
 我们先解决上节留下的疑问：如何解决懒加载过程中的闪烁问题？`startTransition`是React官方给出的解决方案
