--- a/docs/01.前端/02.Vue/01.Vue核心概念/01.data.md
+++ b/docs/01.前端/02.Vue/01.Vue核心概念/01.data.md
@@ -4,9 +4,9 @@ date: 2022-04-25 19:20:05
 permalink: /pages/28b751/
 categories:
   - 前端
-  - Vue核心概念
+  - Vue
 tags:
-  - 
+  - Vue核心概念
 ---- [data的两种定义方式](#data的两种定义方式)
 - [data的两种定义方式](#data的两种定义方式)
 - [组件和实例](#组件和实例)
