--- a/docs/01.前端/02.Vue/03.Vue-Router/01.history.md
+++ b/docs/01.前端/02.Vue/03.Vue-Router/01.history.md
@@ -4,10 +4,11 @@ date: 2022-04-22 15:25:27
 permalink: /pages/f16403/
 categories:
   - 前端
-  - Vue3
+  - Vue
 tags:
   - 
 ---
+
 `createWebHashHistory 与 createWebHistory`是创建路由历史记录对象`history`的两种方法
 
 示例：
