--- a/docs/02.后端/01.服务器/01.linux/03.ssh.md
+++ b/docs/02.后端/01.服务器/01.linux/03.ssh.md
@@ -4,10 +4,9 @@ date: 2022-04-22 14:52:22
 permalink: /pages/977de5/
 categories:
   - 后端
-  - 服务器
   - linux
 tags:
-  - 
+  - linux
 ---
 系统： ubuntu20.04
 
