--- a/docs/03.工具/01.git/03.gitHub-Cli.md
+++ b/docs/03.工具/01.git/03.gitHub-Cli.md
@@ -37,3 +37,9 @@ gh repo create my-project --public --clone
 # 创建一个远程仓库关联当前文件夹
 gh repo create my-project --public --source=. --remote=upstream
 ```
+
+### 配置仓库可见性
+
+```bash
+gh repo edit [仓库名] --visibility private
+```
