--- a/docs/02.后端/03.python/01.学习笔记/04.同步项目依赖.md
+++ b/docs/02.后端/03.python/01.学习笔记/04.同步项目依赖.md
@@ -1,11 +1,23 @@
-# 使用pipreqs库生成requirement.txt文件
+# pipreqs
 
-`pipreqs`用于生成**当前项目有用到的依赖**，通过`pip install pipreqs`安装
+`pipreqs`用于生成**当前项目有用到的依赖**
 
-生成命令：`pipreqs . --encoding=utf-8 --force`
+### 安装
 
-# 根据requirement.txt安装依赖：
+`pip install pipreqs`
 
-```bash
-pip install -r requirements.txt
-```
+### 生成requirement.txt
+
+`pipreqs . --encoding=utf-8 --force`
+
+:::warning
+`pipreqs`会遍历文件，查找引用的外部包，并写入`reqirement.txt`
+
+但是并不会写入**第三方包中引用的第三方包**
+
+对于这种情况，我们只能用`pip freeze`命令查看本地安装的所有包的版本号，并手动添加进`reqirement.txt`
+:::
+
+### 根据requirements.txt安装依赖
+
+`pip install -r requirements.txt`
