--- a/docs/01.前端/01.React/01.进阶/02.Transition.md
+++ b/docs/01.前端/01.React/01.进阶/02.Transition.md
@@ -9,6 +9,8 @@ tags:
   - React
 ---
 
+[[toc]]
+
 我们先解决上节留下的疑问：如何解决懒加载过程中的闪烁问题？`startTransition`是React官方给出的解决方案
 
 <<< @\codes\react-demo\src\pages\react18\transition\lazyload_optimization.jsx#transition
