--- a/docs/01.前端/01.React/01.进阶/04.HOC.md
+++ b/docs/01.前端/01.React/01.进阶/04.HOC.md
@@ -9,6 +9,8 @@ tags:
   - React
 ---
 
+[[toc]]
+
 # HOC是什么？
 
 `higher-order component` : 高阶组件指的是一种**React组件设计模式**，它的实质是用一个函数**接收一个类，添加一些内容，返回一个新类**。其本质就是一个**包装器（装饰器）**。
