--- a/docs/01.前端/01.React/01.进阶/08.suspense.md
+++ b/docs/01.前端/01.React/01.进阶/08.suspense.md
@@ -8,6 +8,9 @@ categories:
 tags:
   - React
 ---
+
+[[toc]]
+
 # 简介
 
 `Suspense`是一个实现异步加载数据的React组件，它可以实现懒加载组件、组件动态渲染等功能，它的`fallback`参数可以由用户提供一个组件未加载完成时的渲染组件。
