--- a/docs/01.前端/02.Vue/02.Vue3/01.响应式API/01.refs.md
+++ b/docs/01.前端/02.Vue/02.Vue3/01.响应式API/01.refs.md
@@ -10,6 +10,9 @@ tags:
   - Vue
   - Vue3
 ---
+
+[[toc]]
+
 # 简介
 
 将一个值转化为**响应式的对象**，使得修改它时能够触发响应式更新（如渲染、computed属性计算等）。如果传入的是一个**类Object对象**，则会调用[reactive](/pages/f5d7a4/)进行递归处理。
