--- a/docs/01.前端/02.Vue/03.Vue-Router/01.history.md
+++ b/docs/01.前端/02.Vue/03.Vue-Router/01.history.md
@@ -9,10 +9,12 @@ tags:
   - 
 ---
 
+[[toc]]
+
 `createWebHashHistory 与 createWebHistory`是创建路由历史记录对象`history`的两种方法
 
 示例：
-```
+```js
 import { createRouter, createWebHashHistory } from 'vue-router'
 
 export const routes = [
