--- a/docs/02.后端/02.nodejs/01.执行命令行.md
+++ b/docs/02.后端/02.nodejs/01.执行命令行.md
@@ -8,6 +8,9 @@ categories:
 tags:
   - nodejs
 ---
+
+[[toc]]
+
 **原理**
 虽然nodejs是单线程语言，但我们可以通过`child_process`来创建子进程，进而通过子进程调用`.bat`、`.cmd`或者直接调用命令
 
