--- a/docs/03.工具/02.可视化工具/01.我爱白嫖.md
+++ b/docs/03.工具/02.可视化工具/01.我爱白嫖.md
@@ -9,9 +9,8 @@ tags:
   - 可视化工具
 ---
 
-:::tip
-有些需要科学上网
-:::
+[[toc]]
+
 
 [PicGo](https://github.com/Molunerfinn/PicGo)： 图床上传工具
 [SMMS图床](https://sm.ms) :图床
@@ -40,3 +39,7 @@ tags:
 [heidisql](https://www.heidisql.com/) : mysql数据库可视化工具
 [向日葵远程控制软件](https://sunlogin.oray.com/) : 远程控制软件
 [daemon tools](https://www.daemon-tools.cc/chn/home) : 光盘（虚拟磁盘）制作软件，老游戏必备
+
+:::tip
+有些需要科学上网
+:::
